# detective_game

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
.claude/rules/: backend.md  frontend.md
api/: index.py
docs/: STORY_BIBLE.md  case-creation-guide.md  design-suggestions.md  game-design-review.md  game-mechanics.md  npc_system_prompts.md  story_outline.md  work_plan.md
docs/plans/: 2026-03-08-admin-page-design.md  2026-03-19-codebase-cleanup-design.md  2026-03-19-codebase-cleanup-implementation.md  2026-03-20-test-coverage-design.md  2026-03-20-test-coverage-plan.md  2026-03-21-frontend-modularization.md  2026-03-22-something-borrowed-case-design.md
scripts/: seed_case_data.py
server/: CLAUDE.md  __init__.py  admin_auth.py  admin_migration.sql  admin_routes.py  app.py  auth_routes.py  chat_routes.py  config.py  errors.py  feedback_routes.py  interrogation.py  npc_registry.py  requirements.txt  schemas.py  seed_case_data.py  story_bible.py  supabase_client.py  supabase_helpers.py  supabase_migration.sql  supabase_tracking.sql  timelines.py  tracking_routes.py
server/cases/: __init__.py
server/llm/: anthropic_client.py  (+5 more)
tests/: conftest.py  test_admin_auth.py  test_admin_routes.py  test_api.py  test_auth_routes.py  test_case_data.py  test_classifier.py  test_config.py  test_factory.py  test_feedback_routes.py  test_interrogation.py  test_llm_clients.py  test_npc_registry.py  test_schemas.py  test_supabase.py  test_tracking_routes.py
web/: CLAUDE.md  i18n.js  index.html  package-lock.json  package.json  vitest.config.js
(+46 files in other folders)
