[project]
name = "detective-game"
version = "0.1.0"
description = "LLM-powered detective mystery game"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
